# SimulatorForSpectroscopicTerms-C

./: .gitignore  CMakeLists.txt  main.c
assets/: combinations.c  combinations.h  econfig.c  econfig.h  grouping.c  grouping.h
lib/: combinations.c  econfig.c  econfig.h  grouping.c  grouping.h  lib.h  utils.c  utils.h
lib/combinatoric/: combinations.c  combinations.h  combinatoric.h  possibilities.c  possibilities.h
lib/grouping/: group.c  group.h  grouping.h  groups.c  groups.h
